# Crazy_Pong_Game

./: .gitignore  CMakeLists.txt  README.md
src/: ball.cpp  ball.h  cfg.h  consoleLogger.cpp  consoleLogger.h  controller.cpp  controller.h  controllers.cpp  controllers.h  fileOps.cpp  fileOps.h  game.cpp  game.h  gameObject.cpp  gameObject.h  main.cpp  messageQueue.cpp  messageQueue.h  paddle.cpp  paddle.h  renderer.cpp  renderer.h
